add browser recommendation page

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Player's Ore Mining Stats Graph</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but ore-graph.silentdepth.dev doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="zh">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>玩家开采统计图</title>
+</head>
+<body>
+<noscript>
+  <strong>We're sorry but ore-graph.silent.land doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+</noscript>
+<script>
+  try {
+    new Proxy({}, {})
+  } catch (e) {
+    location.href = '/why-not-be-modern.html'
+  }
+</script>
+<div id="app"></div>
+<!-- built files will be auto injected -->
+</body>
 </html>
