--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     location.href = '/why-not-be-modern.html'
   }
 </script>
-<div id="app"></div>
+<div id="app" class="w-full sm:w-ui h-screen sm:mx-auto sm:border-l sm:border-r border-gray-300 bg-gray-100 flex flex-col"></div>
 <!-- built files will be auto injected -->
 </body>
 </html>
