--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>玩家开采统计图</title>
 </head>
-<body>
+<body class="bg-gray-50">
 <noscript>
   <strong>We're sorry but ore-graph.silent.land doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
