--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>玩家开采统计图</title>
 </head>
-<body class="bg-gray-50">
+<body class="bg-gray-100">
 <noscript>
   <strong>We're sorry but ore-graph.silent.land doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
 </noscript>
@@ -18,7 +18,7 @@
     location.href = '/why-not-be-modern.html'
   }
 </script>
-<div id="app" class="w-full sm:w-ui min-h-screen sm:mx-auto sm:border-l sm:border-r border-gray-300 bg-gray-100 flex flex-col"></div>
+<div id="app" class="w-full sm:w-ui min-h-screen sm:mx-auto flex flex-col"></div>
 <!-- built files will be auto injected -->
 </body>
 </html>
